// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultInputsService when getting non arcanol inputs should return Lubricant inputs observable translation 1`] = `
Array [
  Object {
    "title": "translated: pages.lubricant.title",
    "value": "translated: recommendation.lubrication.options.grease",
  },
]
`;

exports[`ResultInputsService when getting non arcanol inputs should return application inputs observable translation 1`] = `
Array [
  Object {
    "title": "translated: inputs.temperature.title",
    "value": "translated: inputs.temperature.value",
  },
  Object {
    "title": "translated: inputs.powerSupplyTitle",
    "value": "translated: recommendation.application.powerOptions.external",
  },
]
`;

exports[`ResultInputsService when getting non arcanol inputs should return title observable translation 1`] = `"translated: pages.lubricationPoints.title"`;

exports[`ResultInputsService when getting non arcanol inputs should return title observable translation 2`] = `"translated: pages.lubricant.title"`;

exports[`ResultInputsService when getting non arcanol inputs should return title observable translation 3`] = `"translated: pages.application.title"`;

exports[`ResultInputsService when getting result inputs should return Lubricant observable translation 1`] = `
Array [
  Object {
    "title": "translated: pages.lubricant.title",
    "value": "Arcanol MULTI2",
  },
]
`;

exports[`ResultInputsService when getting result inputs should return application observable translation 1`] = `
Array [
  Object {
    "title": "translated: inputs.temperature.title",
    "value": "translated: inputs.temperature.value",
  },
  Object {
    "title": "translated: inputs.powerSupplyTitle",
    "value": "translated: recommendation.application.powerOptions.external",
  },
]
`;

exports[`ResultInputsService when getting result inputs should return title observable translation 1`] = `"translated: pages.lubricationPoints.title"`;

exports[`ResultInputsService when getting result inputs should return title observable translation 2`] = `"translated: pages.lubricant.title"`;

exports[`ResultInputsService when getting result inputs should return title observable translation 3`] = `"translated: pages.application.title"`;
